ffmpeg Flac encoder broken
Flac encoding with ffmpeg is broken, result won't play anywhere, with ogg and raw muxing.
Flac encoding with libflac plays fine, with ogg and raw muxing.
little script to create samples:
=== for i in ffmpeg flac
do for j in raw ogg
do vlc -I dummy test.wav --sout "#transcode{acodec=flac,aenc=
There was an error rendering this math block. KaTeX parse error: Expected 'EOF', got '}' at position 2: i}̲:standard{acces…
i.j}"
vlc:quit
done
done
flac test.wav -o test-flac-standalone.flac
ffmpeg -i test.wav test-ffmpeg-standalone.flac
===
-rw-r--r-- 1 fun fun 39161718 oct 31 00:28 test-ffmpeg-standalone.flac
-rw-r--r-- 1 fun fun 39160641 oct 31 00:27 test-ffmpeg.raw
diff -a test-ffmpeg-standalone.flac test-ffmpeg.raw 2>/dev/null|wc -c
4209
4 kilobytes of difference for 40 mega bytes of data, not a lot
Also, why are two encoders for flac needed ?