avcodec encoder: sets last-metadata-block for FLAC streams

Closes #805